INGRESS/Cilium/Cilium_Gateway_HTTP.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-cilium-http
spec:
  gatewayClassName: gwclass-cilium-nodeport
  #gatewayClassName: gwclass-cilium
  listeners:
  - name: cilium-http 
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
