INGRESS/Cilium/Cilium-Ingress_Frontend-1111.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-frontend-1111
spec:
  ingressClassName: cilium
  rules:
  - http:
      paths:
      - path: /frontend-1111 
        #pathType: PathPrefix 
        pathType: ImplementationSpecific
        backend:
          service:
            name: service-alpine-k8s-tools-1111 
            port:
              number: 1111
