INGRESS/Cilium/Cilium_HttpRoute_frontend-1111_HTTP.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-http-frontend-1111 

spec:
  parentRefs:
  - name: gateway-cilium-http
  hostnames:
  - "haprx1.lab.byte13.org"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /frontend-1111
    backendRefs:
    - name: service-alpine-k8s-tools-1111 
      kind: Service
      port: 1111
