INGRESS/Cilium/Cilium_HttpRoute_frontend-2222_HTTP.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-http-frontend-2222 

spec:
  parentRefs:
  - name: gateway-cilium-http
  hostnames:
  - "haprx1.lab.byte13.org"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /frontend-2222
    backendRefs:
    - name: service-alpine-k8s-tools-2222 
      kind: Service
      port: 2222
